# price_monitoring_service_test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  price_tracker_architecture.en.md  price_tracker_architecture.md  pyproject.toml  test_task.txt
alembic/: env.py
alembic/versions/: 11f8cd6cb440_initial.py  c7a1e9f2b3d4_scaling_indexes.py
app/: main.py
app/api/: __init__.py  deps.py  errors.py  responses.py
app/api/v1/: __init__.py  alerts.py  catalog.py  (+4 more)
app/core/: config.py  email.py  exceptions.py  http_retry.py  logger.py  redis.py  security.py  wait_for_db.py
app/schemas/: alert.py  auth.py  currency.py  enums.py  error.py  price.py  product.py  types.py
app/services/: alert_service.py  currency_service.py  db_service.py  price_fetcher.py  price_service.py  user_product_service.py
app/tasks/: alerts.py  celery_app.py  prices.py  rates.py  seed.py
scripts/: generate_token.py  run_check_alerts.py  sync_historical_rates.py
tests/: conftest.py  run.py  test_adapters.py  test_api_watchlist.py  test_currency_service.py  test_price_fetcher.py  test_price_service.py  test_smoke.py  test_unit.py  test_user_product_service.py
tests/integration/: conftest.py  test_api_alerts.py  test_api_catalog.py  test_api_currencies.py  test_api_errors.py  test_api_products.py  test_api_watchlist.py  test_currency_service.py  test_price_fetcher.py  test_price_service.py  test_smoke.py  test_user_product_service.py
tests/unit/: test_adapters.py  test_http_retry.py  test_openapi_errors.py  test_scripts.py  test_unit.py
(+20 files in other folders)
