[project]
name = "price-tracker"
version = "0.1.0"
description = "Price monitoring service for tracking product prices across multiple shops"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "aiosmtplib>=5.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=7.1.0",
    "testcontainers[postgresql]>=4.14.2",
    "fakeredis>=2.36.2",
    "psycopg2-binary>=2.9.12",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Дом-стиль — datetime.timezone.utc (единообразно во всём коде), а не datetime.UTC.
ignore = ["UP017"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/core/wait_for_db.py",
    "app/tasks/celery_app.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
